syntax = "proto3";

package main;

option go_package = ".";

service TestApi {
  rpc Echo(ResponseRequest) returns (ResponseRequest);
  rpc GetUser(UserRequest) returns (UserResponse);
}

message ResponseRequest {
  string msg = 1;
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
  bool registered = 5;
}